--- a/styles/style.css
+++ b/styles/style.css
@@ -18,12 +18,6 @@
   left: 0;
 }
 
-address {
-  font-style: normal;
-  font-size: 18px;
-  line-height: 24.3px;
-}
-
 .header {
   margin-top: 92px;
 }
@@ -46,9 +40,12 @@ address {
 }
 
 .contacts {
-  list-style-type: none;
+  font-style: normal;
 }
+.contacts__link{
+  text-decoration: none;
 
+}
 .image-with-margin {
   width: 138px;
   margin-left: 39px;
@@ -56,7 +53,6 @@ address {
 
 .header__item {
   font-size: 18px;
-  font-family: 'Raleway', sans-serif;
 }
 
 .circle {
@@ -77,10 +73,9 @@ address {
   text-decoration: none;
 }
 
-.contacts__item {
-  list-style-type: none;
+.contacts__item{
   font-size: 18px;
-  font-family: 'Raleway', sans-serif;
+  line-height: 24.3px;
 }
 
 .introduction {
@@ -143,6 +138,7 @@ address {
 
 .contacts__list {
   list-style-type: none;
+  width: 243px;
 }
 
 .lots__left-margin {
@@ -275,4 +271,7 @@ address {
 .footer__socials-medias {
   display: flex;
   gap: 48px;
+}
+.footer__link{
+  text-decoration: none;
 }
